[package]
name = "rust_profile_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "*"
ic-cdk = "*"
ic-cdk-timers = "*" # Feel free to remove this dependency if you don't need timers
ic-cdk-macros = "*"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4.0"

rand = "0.8.4"
# ring = {version = "0.17.7", features = ["wasm32_unknown_unknown_js"]}
ring = "0.17.7"


hex = "0.4.3"
sha2 = "0.10.6"
k256 = { version = "0.12.0", features = ["ecdsa"] }
# Enable `custom` feature of k256's getrandom dependency. See lib.rs for more details.
getrandom = { version = "0.2", features = ["custom"] }

